# zelart-parser-bot

./: .env  Makefile  main.py  nixpacks.toml  pyproject.toml  requirements.txt  todo.md
src/bot/: bot_handlers.py  bot_init.py  bot_messages.py  constant_variables.py  dataclass.py  exception_handler.py  helpers.py  messages.py
src/database/: mongodb.py
src/parser/: zelart_parser.py
